# crumble

./: .gitignore  PKGBUILD  README.md  TODO.md  crumble-0.1.0-1-x86_64.pkg.tar.zst  crumble.install  index.html  package-lock.json  package.json
.github/workflows/: release.yml
pkg/crumble/: .BUILDINFO  .MTREE  .PKGINFO
pkg/crumble/usr/share/applications/: crumble.desktop
src/: PKGBUILD  README.md  index.html  main.ts  package-lock.json  styles.css
src-tauri/: Cargo.toml  crumble-mime.xml  tauri.conf.json
src-tauri/src/: lib.rs
src/crumble-0.1.0/: LICENSE  package.json
src/crumble-0.1.0/src/: main.ts  styles.css
src/crumble-0.1.0/src-tauri/: Cargo.toml
src/crumble-0.1.0/src-tauri/src/: lib.rs  main.rs
src/src-tauri/: tauri.conf.json
