[package]
name = "crumble"
version = "1.2.0"
description = "Pack and unpack .crumbs files"
authors = ["you"]
edition = "2021"

[lib]
name = "crumble_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", default-features = false, features = ["custom-protocol", "wry", "x11", "dbus"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zstd = "0.13"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
walkdir = "2"
uuid = { version = "1", features = ["v4"] }

