[package]
name = "crumble"
version = "0.1.0"
description = "Pack and unpack .crumbs files"
authors = ["you"]
edition = "2021"

[lib]
name = "crumble_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zstd = { version = "0.13", features = ["experimental"] }
aes-gcm = "0.10"
argon2 = "0.5"
tar = "0.4"
rand = "0.8"
anyhow = "1"
base64 = "0.22"
walkdir = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"

